Fixed overlapping buttons.

--- a/src/index.css
+++ b/src/index.css
@@ -116,7 +116,7 @@ h4 {
   background-color: whitesmoke;
   position: fixed;
   width: 50vw;
-  height: 80%;
+  height: 85%;
   border-radius: 15px;
   display: flex;
   justify-content: space-around;
@@ -205,7 +205,7 @@ h4 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-height: 35%;
+  max-height: 40%;
   flex-wrap: wrap;
 }
 .teamB {
